# StereoscopicTracking

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  dockerRun.sh  docker_run.sh  downloadYoloV4Weights.sh  installNvidiaDockerSupport.sh  main.cpp  pyzed-3.4-cp38-cp38-linux_x86_64.whl
tools/: ZED_Depth_Viewer  ZED_Diagnostic  ZED_SVO_Editor  ZEDfu
